'fixthespacing'

--- a/app/assets/stylesheets/api/browse/movie_rows.scss
+++ b/app/assets/stylesheets/api/browse/movie_rows.scss
@@ -1,8 +1,8 @@
 .movie-row-main {
     color: white;
     width: 100%;
-    margin-bottom: 70px;
-    margin-top: 20vh;
+    margin-bottom: 4vh;
+    margin-top: 4vh;
 }
 
 .genre-title {
